tests/script_errors/mod_bound_cross/error.txt
Error: 
    9 | 
   10 | mod badger with
   11 |   fn fib(n) with
   12 |     lies::snot::fib_(0, 1, n)
      |     ^^^^^^^^^^^^^^^^^^^^^^^^^ Call to undefined function lies::snot::fib_
   13 |   end;
   14 | end;
   15 |